Fix some styling on the instruction list to properly work on smaller screens.

--- a/client/my-sites/checkout/checkout-thank-you/style.scss
+++ b/client/my-sites/checkout/checkout-thank-you/style.scss
@@ -743,6 +743,17 @@
 	}
 }
 
+.licensing-thank-you-manual-activation-instructions__list {
+	list-style: none;
+	margin: 0;
+}
+
+.licensing-thank-you-manual-activation-instructions__list-item {
+	display: flex;
+	align-items: center;
+	margin-bottom: 24px;
+}
+
 .licensing-thank-you-manual-activation-instructions__step-number {
 	display: inline-flex;
 	justify-content: center;
@@ -758,7 +769,7 @@
 
 	border-radius: 24px; /* stylelint-disable-line scales/radii */
 
-	width: 28px;
+	min-width: 28px;
 	height: 28px;
 }
 
